--- a/toxin/package.json
+++ b/toxin/package.json
@@ -13,8 +13,10 @@
   "license": "ISC 2019",
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.5",
+    "css-loader": "^3.4.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "item-quantity-dropdown": "^2.1.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "node-static": "^0.7.11",
