--- a/toxin/package.json
+++ b/toxin/package.json
@@ -12,10 +12,13 @@
   "author": "Aliya Makysheva",
   "license": "ISC 2019",
   "devDependencies": {
+    "air-datepicker": "^2.2.3",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.4.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "node-static": "^0.7.11",
@@ -28,5 +31,8 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "material-icons": "^0.3.1"
   }
 }
