--- a/toxin/package.json
+++ b/toxin/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "air-datepicker": "^2.2.3",
+    "chart.js": "^2.9.3",
     "ion-rangeslider": "^2.3.1",
     "material-icons": "^0.3.1",
     "normalize.css": "^8.0.1"
