--- a/toxin/package.json
+++ b/toxin/package.json
@@ -36,6 +36,7 @@
     "chart.js": "^2.9.3",
     "ion-rangeslider": "^2.3.1",
     "material-icons": "^0.3.1",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "url-loader": "^4.1.0"
   }
 }
